  which displays Check Constraints for DB2 LUW.

#622 Bookmarks Plugin: User Bookmarks can be displayed as tree.
  The tree structure is generated from the Bookmarks' names and from a path separator
  that can be configured at the bottom of the Bookmarks' preferences panel.
  See menu File --> Global Preferences --> tab "Bookmarks"


Bug fixes:

Alias find dialog (ctrl+alt+shift+g or ctrl+alt+shift+f):
  Modifying an Alias folder raised NullPointerException.

Object tree: When reading the contents of a table failed with an error
  it could prevent all detail tabs from being displayed.

Find columns dialog: The result table now allows to select multiple rows.
  Info: The find columns function available in
  - Session menu and toolbar (Alt+Shift+F)
  - Right mouse menu of Object tree
  - Right mouse menu of Graphs

File import: Import dialog did not work when the import file
  contained lines longer than 100000 characters.


5.0.0 (09/18/2025)
==================
Enhancements:

Introduced Java 25 compatibility.

Client properties in Object tree:
  A new detail tab name "Client Properties" of the Object tree's root node displays
  the properties returned by java.sql.Connection.getClientInfo().

#620 Equipped the file export dialog with a vertical scrollbar when needed.
  To better support this, the dialog was partly rearranged.

#620 UI table to MS Excel exports of SQL results now offers to create additional
  sheets containing the exported SQL statements.
  This is an extension of the original implementation of feature request 620.

#621 The UI table's "Copy separated by ..." right mouse menu function now allows
  to include column headers and to define a cell delimiter.

#620 Direct SQL to MS Excel exports now offers to create additional
  sheets containing the exported SQL statements.
  Note: For direct SQL exports, right mouse click an SQL statement or hit Ctrl+T --> sql2file